fix about z-index

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -77,7 +77,7 @@ h1 {
 .main--about {
     position: absolute;
     cursor: pointer;
-    z-index: 2;
+    z-index: 3;
     width: 100vw;
     height: calc(100vh - 60px);
     background-color: white;
